<resources>
    <string name="app_name">Let\'s go</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Let\'s Go</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password repeat</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_username">This username doesn\'t exist</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">Let\'s Go</string>
    <string name="dummy_content">Lets\nGO</string>
    <string name="action_sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="fragment_title_start">Start</string>
    <string name="fragment_title_itinerary">Itinerary</string>
    <string name="fragment_title_message">Message</string>
    <string name="fragment_title_contact">Contact</string>
    <string name="no_itinerary">No Itinerary</string>
    <string name="read_more">Read More</string>
    <string name="search_label">Search Label</string>
    <string name="search_hint">Search Hint</string>
    <string name="search_settings_desc">Search Setting Desc</string>
    <string name="title_activity_message_main">MessageMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--to do Message string -->
    <string name="message_empty">还没有收到消息</string>
    <string name="message_btn_empty">开始探索</string>
    <string name="action_forget_password">Forget password</string>
    <string name="menu_new_message">Message</string>
    <string name="title_activity_register">RegisterActivity</string>


</resources>
